comic service added

--- a/overcomplicated-tictactoe/src/main/resources/templates/game.html
+++ b/overcomplicated-tictactoe/src/main/resources/templates/game.html
@@ -95,7 +95,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
-                    <img th:src="${comic_uri}" alt="Comic placeholder"/>
+                    <img th:src="${comic_uri}" th:alt="${comic_alt}"/>
                 </div>
             </div>
         </div>
