ai service works without frontend

--- a/overcomplicated-tictactoe/src/main/resources/templates/game.html
+++ b/overcomplicated-tictactoe/src/main/resources/templates/game.html
@@ -10,6 +10,11 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/darkly/bootstrap.min.css" rel="stylesheet" integrity="sha384-S7YMK1xjUjSpEnF4P8hPUcgjXYLZKK3fQW1j5ObLSl787II9p8RO9XUGehRmKsxd" crossorigin="anonymous"/>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"/>
     <link href="/style.css" rel="stylesheet" />
+    <script
+        src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+    <script type="application/javascript" src="js/game.js"></script>
 </head>
 <body>
     <div class="container">
@@ -48,35 +53,35 @@
                 <div class="container-fluid game-container">
                     <div class="row">
                         <div class="col-xs-4">
-                            <a href="/game-move?move=0" class="btn btn-default square">&nbsp;</a>
+                            <a href="#" class="btn btn-default square" id="0">&nbsp;</a>
                         </div>
                         <div class="col-xs-4">
-                            <a href="/game-move?move=1" class="btn btn-default square"><i class="fa fa-circle-o" aria-hidden="true"></i></a>
+                            <a href="#" class="btn btn-default square" id="1"><i class="fa fa-circle-o" aria-hidden="true"></i></a>
                         </div>
                         <div class="col-xs-4">
-                            <a href="/game-move?move=2" class="btn btn-default square"><i class="fa fa-times" aria-hidden="true"></i></a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-4">
-                            <a href="/game-move?move=3" class="btn btn-default square">&nbsp;</a>
-                        </div>
-                        <div class="col-xs-4">
-                            <a href="/game-move?move=4" class="btn btn-default square">&nbsp;</a>
-                        </div>
-                        <div class="col-xs-4">
-                            <a href="/game-move?move=5" class="btn btn-default square">&nbsp;</a>
+                            <a href="#" class="btn btn-default square" id="2"><i class="fa fa-times" aria-hidden="true"></i></a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-4">
-                            <a href="/game-move?move=6" class="btn btn-default square">&nbsp;</a>
+                            <a href="#" class="btn btn-default square" id="3">&nbsp;</a>
                         </div>
                         <div class="col-xs-4">
-                            <a href="/game-move?move=7" class="btn btn-default square">&nbsp;</a>
+                            <a href="#" class="btn btn-default square" id="4">&nbsp;</a>
                         </div>
                         <div class="col-xs-4">
-                            <a href="/game-move?move=8" class="btn btn-default square">&nbsp;</a>
+                            <a href="#" class="btn btn-default square" id="5">&nbsp;</a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-4">
+                            <a href="#" class="btn btn-default square" id="6">&nbsp;</a>
+                        </div>
+                        <div class="col-xs-4">
+                            <a href="#" class="btn btn-default square" id="7">&nbsp;</a>
+                        </div>
+                        <div class="col-xs-4">
+                            <a href="#" class="btn btn-default square" id="8">&nbsp;</a>
                         </div>
                     </div>
                 </div>
