--- a/overcomplicated-tictactoe/src/main/resources/templates/game.html
+++ b/overcomplicated-tictactoe/src/main/resources/templates/game.html
@@ -56,10 +56,10 @@
                             <a href="#" class="btn btn-default square" id="0">&nbsp;</a>
                         </div>
                         <div class="col-xs-4">
-                            <a href="#" class="btn btn-default square" id="1"><i class="fa fa-circle-o" aria-hidden="true"></i></a>
+                            <a href="#" class="btn btn-default square" id="1"></a>
                         </div>
                         <div class="col-xs-4">
-                            <a href="#" class="btn btn-default square" id="2"><i class="fa fa-times" aria-hidden="true"></i></a>
+                            <a href="#" class="btn btn-default square" id="2"></a>
                         </div>
                     </div>
                     <div class="row">
